--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -25,15 +25,20 @@ width: 100px;
  font-weight: bold;
  float: left;
 }
-.row{
+section{
+	background-color: white;
+}
+/*.row{
 	margin-left: 30px;
 	margin-right:30px;
-}
+	
+}*/
 .section{
   background-color:#A9A9A9;
 height: 1000px;
  position: relative;
-
+margin-top: 3px;
+margin-bottom: 10px;
  border: 1px solid black;
  /*border-left: 10px;*/
  padding-right: 20px;
@@ -51,24 +56,31 @@ height: 1000px;
 	text-align: center;
 	color: black;
 	font-weight: bold;
-	/*margin-top: 50px*/
+	margin-top: 5px;
 }
 /*button{
 	float: right;
 }*/
 #nav-list a{
 	text-align: center;
-	margin-top: 6px;
+	margin-top: 3px;
 	/*margin-bottom: 5px*/
 	color: black;
 	font-size:20px;
 	/*border-bottom: 10px;*/
-	background-color: white;
+	/*background-color: white;*/
+	
 }
 #collapsable-nav{
 	margin-top: 0px;
 }
-	
+body{
+	padding-top: 20px;
+}
+
+a: first-child{
+	margin-top: 0px;
+}	
 /*div > nav-list{
 margin-bottom: 0px;
 text-align: center;
