--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,19 +1,21 @@
 #header-nav {
 	background-color: #696969;
 	border-radius: 0;
-}
+	}
 
 .navbar-header{
 	height: 50px
+	
 }
 
-}*/
+
 .navbar-brand{
-  /*height: 100px;*/
+	font-weight: bold;
+	/*color: white;*/
+	
+ 
  }
- .navbar-brand a:hover, .navbar-brand a:focus{
- 	text-decoration: none
- }
+
 .navbar-brand h1{
 color: black;
 width: 100px;
@@ -25,9 +27,9 @@ width: 100px;
  font-weight: bold;
  float: left;
 }
-section{
+/*section{
 	background-color: white;
-}
+}*/
 /*.row{
 	margin-left: 30px;
 	margin-right:30px;
@@ -35,14 +37,11 @@ section{
 }*/
 .section{
   background-color:#A9A9A9;
-height: 1000px;
+height: 700px;
  position: relative;
-margin-top: 3px;
+margin-top: 6px;
 margin-bottom: 10px;
  border: 1px solid black;
- /*border-left: 10px;*/
- padding-right: 20px;
- padding-left: 20px
 
 }
 
@@ -58,9 +57,7 @@ margin-bottom: 10px;
 	font-weight: bold;
 	margin-top: 5px;
 }
-/*button{
-	float: right;
-}*/
+
 #nav-list a{
 	text-align: center;
 	margin-top: 3px;
@@ -68,7 +65,7 @@ margin-bottom: 10px;
 	color: black;
 	font-size:20px;
 	/*border-bottom: 10px;*/
-	/*background-color: white;*/
+	background-color: white;
 	
 }
 #collapsable-nav{
@@ -81,19 +78,3 @@ body{
 a: first-child{
 	margin-top: 0px;
 }	
-/*div > nav-list{
-margin-bottom: 0px;
-text-align: center;
-
-}*/
-
-/*.collapsable-nav{
-	float: left;
-}*/
-/*@media (min-width: 1000px) {
-
-row.div{
-	background-color: green;
-}
-	
-}
